# rx200-vision-manipulation

./: .gitignore  README.md
src/rx200_moveit_control/: CMakeLists.txt  README.md  package.xml  setup.py
src/rx200_moveit_control/launch/: launch_all.launch.py
src/rx200_moveit_control/outdated/: old.py  rx200_moveit_action_client_nosing.py  rx200c.urdf.xacro.dontuse
src/rx200_moveit_control/rviz/: perception.rviz
src/rx200_moveit_control/rx200_moveit_control/: __init__.py  gui_publisher.py  rx200_moveit_action_client.py  vision_subscriber.py
src/rx200_xsarm_descriptions/: CMakeLists.txt  package.xml
src/rx200_xsarm_descriptions/meshes/rx200_meshes/: tilted_mount.STL
src/rx200_xsarm_descriptions/urdf/: rx200.urdf.xacro
